記事テスト

--- a/_posts/1970-01-01-test.ja.md
+++ b/_posts/1970-01-01-test.ja.md
@@ -1,37 +1,190 @@
 ---
 layout: post
-title: "テスト"
+title: "Go言語クイズ：deferとgoroutine"
 ---
 
-## てすと
+次のコードを実行するとどうなるでしょう。
 
-> aaa
+```go
+package main
 
-1. hoge
-2. fuga
-3. hige
+import (
+	"runtime"
+	"sync"
+)
 
-<h3>ひげ</h3>
+func main() {
+	runtime.GOMAXPROCS(1)
 
-bbb`ccc`
-[link](/)
+	wg := sync.WaitGroup{}
+	wg.Add(1)
+	go func(wg sync.WaitGroup){
+		defer print("A")
+		defer print("B")
+		defer go print("C")
+		defer func() { go print("D") }()
 
+		print("E")
+		wg.Done()
+	}(wg)
+	
+	print("F")
+	wg.Wait()
+	print("G")
+}
+```
 
+そうです、`defer go print("C")`でコンパイルエラーです。簡単すぎますね。
+[Playground](https://play.golang.org/p/rShrAUW3-nt)
 
-<details><summary>ほげ</summary>
+GoのSpecの[Defer Statements](https://golang.org/ref/spec#Defer_statements)を見ると、次のように定義されています。
 
-<h3>ふが</h3>
+> DeferStmt = "defer" Expression .
 
-> aaa
+`defer`に続けられるのは`Expression`のみです。
+ところが、`go print("C")`は`Statement`（`GoStmt`）であって`Expression`ではありません。
 
-1. hoge
-2. fuga
-3. hige
+## 問題
 
-<h3>ひげ</h3>
+さて、ここからが問題です。
+先程のコンパイルエラーを解消しました。
+これを実行するとどうなるでしょう。
+（処理系は Go 1.15.6 とします）
 
-bbb`ccc`
-[link](/)
+```go
+package main
 
+import (
+	"runtime"
+	"sync"
+)
+
+func main() {
+	runtime.GOMAXPROCS(1)
+
+	wg := sync.WaitGroup{}
+	wg.Add(1)
+	go func(wg sync.WaitGroup){
+		defer print("A")
+		defer print("B")
+		defer func() { go print("C") }()
+		defer func() { go print("D") }()
+
+		print("E")
+		wg.Done()
+	}(wg)
+
+	print("F")
+	wg.Wait()
+	print("G")
+}
+```
+
+1. FEABCD まで表示されてDeadlock
+2. FEBADC まで表示されてDeadlock
+3. FEBACD まで表示されてDeadlock
+4. FEBADCG と表示されて終了
+
+[Playground](https://play.golang.org/p/nykfTiglLyL)
+
+## 解答と解説
+
+<details><summary>解答</summary>
+正解： 3. FEBACD まで表示されてDeadlock
 </details>
 
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+↓
+
+### sync.WaitGroupの使い方
+
+最初にDeadlockするかどうかを考えます。
+これは標準ライブラリの[`sync.WaitGroup`](https://golang.org/pkg/sync/#WaitGroup)でごくまれにやってしまうミスの問題です。
+ドキュメントには次のようにあり、`Add(1)`したあとコピーして使うことはできません。
+
+> A WaitGroup must not be copied after first use.
+
+今回のコードでは、goroutineで呼び出している無名関数の引数として値渡ししているため、そこでコピーが発生しています。
+幸いこのミスは`go vet`で警告されるので、簡単に気づくことができます。
+`sync.Waitgroup`を関数に渡すときはかならずポインタ渡ししましょう。
+
+### deferの処理順序
+
+続いて、deferの処理順序を確認します。
+[Defer Statements](https://golang.org/ref/spec#Defer_statements)には次のようにあります。
+
+> Instead, deferred functions are invoked immediately before the surrounding function returns, in the reverse order they were deferred.
+
+関数から戻る直前に、**deferされたのと逆順で**実行されるとあります。
+なので、今回のコードでは次のように実行されます。
+
+1. `func() { go print("D") }()`
+2. `func() { go print("C") }()`
+3. `print("B")`
+4. `print("A")`
+
+### goroutineのスケジューリング
+
+最後にgoroutineがど順序で呼ばれるかが問題となります。
+ただしこれはSpecに定義されているわけではなく、処理系依存です（ごめんなさい）。
+
+現在のGoのオフィシャルバイナリのgoroutineのスケジューラについては、の次の記事が大変わかりやすいです。
+[Golangのスケジューラあたりの話](https://qiita.com/takc923/items/de68671ea889d8df6904)
+
+問題のコードでは、わざとらしく`runtime.GOMAXPROCS(1)`を呼んでいます。
+これにより*P(Processor)*は1つだけになり、goroutineの*キュー*も1つになります。
+
+goステートメントが実行された時、そのgoroutineはすぐには実行されずに*キュー*に積まれます。
+そして現在のgoroutineが完了した時、*キュー*に最後に積まれたgoroutineを取り出して処理を始めます。
+（*キュー*と呼ばれていますが、動作はFILOのスタックです）
+
+ここで問題のコードを見ます。
+
+まず`go func(wg sync.WaitGroup){...`でgoroutineが作られ*キュー*に積まれますがまだ実行されません。
+そのまま`print("F")`により画面に**F**が表示され、`wg.Wait()`にたどり着きます。
+
+ここで`main`関数のgoroutineは待機してしまうので、*キュー*に積まれたgoroutineに処理が移ります。
+4つの`defer`が処理された後、`print("E")`により**E**が表示されます。
+ここで`wg.Wait()`を呼んでいますが、先に説明したように値渡しをしてしまっているため、`main`関数は待機状態のままです。
+
+無名関数が終了したので`defer`を逆順に実行します。
+最初の`func() { go print("D") }()`によってgoroutineが作られ*キュー*に積まれます。
+次に`func() { go print("C") }()`でも同じ様にgoroutineが*キュー*に積まれます。
+続いて`print("B")`、`print("A")`が実行され、画面に**BA**が表示されます。
+
+ここでgoroutineが終了したので*キュー*に最後に積まれたものに処理が移ります。
+それは`print("C")`でした。画面に**C**が表示されます。
+次にまた実行可能なgoroutineを*キュー*から取り出すと、それは`print("D")`で、画面に**D*:が表示されます。
+
+ここで実行可能なgoroutineがなくなってしまったので、Deadlockとなり終了します。
+
+ということで、正解は3. **FEBACD**と表示されてDeadlock でした。
